--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://localhost:8000",
+  "proxy": "https://mern-blog-app-hrno.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
